# torch2matlab

./: .gitignore  CMakeLists.txt  compile_net_forward.sh  compile_onnx_test.sh  compile_test.m  create_net.py  forward_test.m  install_gcc.sh  net.pt  onnx_test.cpp  onnx_test.sh  test.sh  torch_test.cpp  torch_test.sh
onnx_cmake/: CMakeLists.txt
torch_cmake/: CMakeLists.txt
